--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Covid-19 Information</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap-grid.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@700&display=swap" rel="stylesheet">
@@ -30,11 +28,11 @@
                     <div class="line"></div>
                 </div>
                 <nav class="nav-links" id="nav-links">
-                    <a href="#" class="nav-link active">Overview</a>
-                    <a href="#" class="nav-link">Contagion</a>
-                    <a href="#" class="nav-link">Symptoms</a>
-                    <a href="#" class="nav-link">Prevention</a>
-                    <a href="#" class="nav-link">Contact</a>
+                    <a href="#overview" class="nav-link active">Overview</a>
+                    <a href="#contagion" class="nav-link">Contagion</a>
+                    <a href="#symptomps" class="nav-link">Symptoms</a>
+                    <a href="#prevention" class="nav-link">Prevention</a>
+                    <a href="#contact" class="nav-link">Contact</a>
                 </nav>
             </div>
         </div>
@@ -43,7 +41,7 @@
     <!-- Main -->
     <main>
         <!--COVİD-19 Alert-->
-        <section class="section hero">
+        <section class="section hero" id="overview">
             <div class="container">
                 <div class="row direction">
                     <div class="col-12 col-md-6 col-lg-6 text-position">
@@ -94,7 +92,7 @@
         </section>
 
         <!--Contagion-->
-        <section class="section contagion">
+        <section class="section" id="contagion">
             <div class="container">
                 <div class="upside upside--top">
                     <h2 class="upside__title">Covid-19</h2>
@@ -145,7 +143,7 @@
         </section>
 
         <!-- Symtomps -->
-        <section class="symptomps">
+        <section class="symptomps" id="symptomps">
             <div class="container">
                 <div class="upside top">
                     <h2 class="upside__title">Covid-19</h2>
@@ -168,7 +166,7 @@
         </section>
 
         <!-- Prevention -->
-        <section class="prevention">
+        <section class="prevention" id="prevention">
             <div class="container">
                 <div class="upside">
                     <h2 class="upside__title">Covid-19</h2>
@@ -252,7 +250,7 @@
         </section>
 
         <!-- Contact -->
-        <section class="contact">
+        <section class="contact" id="contact">
             <div class="container">
                 <div class="help">
                     <p class="help__desc">
