--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
         </footer>
     </main>
     <script src="js/functions.js"></script>
+    <script>
+        (function(w,d,u){
+                var s=d.createElement('script');s.async=true;s.src=u+'?'+(Date.now()/60000|0);
+                var h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+        })(window,document,'https://cdn.bitrix24.com/b17929189/crm/site_button/loader_2_plnihy.js');
+</script>
 </body>
 
 </html>
