--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- end top nav -->
 
     <!-- main content -->
-    <div class="content">
+    <main class="content">
         <div class="container">
             <!-- country select -->
             <div class="row">
@@ -134,8 +134,52 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-lg-12">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <div class="box">
+                                        <h4 class="box-header">
+                                            what is covid-19
+                                        </h4>
+                                        <div class="box-body">
+                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/i0ZabxXmH4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                    
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="box">
+                                        <h4 class="box-header">
+                                            Update on virus variants
+                                        </h4>
+                                        <div class="box-body">
+                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/_1s7__6CjtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="box">
+                                        <h4 class="box-header">
+                                            Preventing COVID-19 in your workplace
+                                        </h4>
+                                        <div class="box-body">
+                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/8dlUqlMDkR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-6">
+                                    <div class="box">
+                                        <h4 class="box-header">
+                                            What Happens If You Get Coronavirus?
+                                        </h4>
+                                        <div class="box-body">
+                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/5DGwOJXSxqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <!-- end all time chart -->
-
                         <!-- embed video -->
                         <!-- end embed video -->
                     </div>
@@ -200,7 +244,7 @@
             </div>
             <!-- end tracking information -->
         </div>
-    </div>
+    </main>
     <!-- end main content -->
 
     <div class="loader">
