--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <div class="nav-frame">
 
                 <figure class="pageLogo">
-                    <img src="images/page-logo.svg"
-                        class="pageLogo__image" alt="LOGO">
+                    <img src="images/page-logo.svg" class="pageLogo__image" alt="LOGO">
                 </figure>
                 <div class="open-menu" id="open-menu">
                     <div class="line"></div>
@@ -142,10 +141,14 @@
                                             what is covid-19
                                         </h4>
                                         <div class="box-body">
-                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/i0ZabxXmH4Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="315"
+                                                src="https://www.youtube.com/embed/i0ZabxXmH4Y"
+                                                title="YouTube video player" frameborder="0"
+                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe>
                                         </div>
                                     </div>
-                                    
+
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="box">
@@ -153,7 +156,11 @@
                                             Update on virus variants
                                         </h4>
                                         <div class="box-body">
-                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/_1s7__6CjtM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="315"
+                                                src="https://www.youtube.com/embed/_1s7__6CjtM"
+                                                title="YouTube video player" frameborder="0"
+                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -163,7 +170,11 @@
                                             Preventing COVID-19 in your workplace
                                         </h4>
                                         <div class="box-body">
-                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/8dlUqlMDkR4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="315"
+                                                src="https://www.youtube.com/embed/8dlUqlMDkR4"
+                                                title="YouTube video player" frameborder="0"
+                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -173,7 +184,11 @@
                                             What Happens If You Get Coronavirus?
                                         </h4>
                                         <div class="box-body">
-                                            <iframe width="100%" height="315" src="https://www.youtube.com/embed/5DGwOJXSxqg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                            <iframe width="100%" height="315"
+                                                src="https://www.youtube.com/embed/5DGwOJXSxqg"
+                                                title="YouTube video player" frameborder="0"
+                                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                allowfullscreen></iframe>
                                         </div>
                                     </div>
                                 </div>
@@ -261,13 +276,16 @@
                     </figure>
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
-                    <a href="#" class="footer__link">Overview</a>
-                    <a href="#" class="footer__link">Symptomps</a>
-                    <a href="#" class="footer__link">Prevention</a>
-                    <a href="#" class="footer__link">Treatment</a>
+                    <a href="index.html" class="footer__link">Statistics</a>
+                    <a href="overview.html" class="footer__link">Overview</a>
+                    <a href="symptoms.html" class="footer__link">Symptoms</a>
+                    <a href="prevention.html" class="footer__link">Prevention</a>
+                    <a href="news.html" class="footer__link">News</a>
                 </div>
                 <div class="col-lg-3">
-                    <p>Source from <a href="https://documenter.getpostman.com/view/10808728/SzS8rjbc#b07f97ba-24f4-4ebe-ad71-97fa35f3b683" target="_blank">api.covid19api.com</a></p>
+                    <p>Source from <a
+                            href="https://documenter.getpostman.com/view/10808728/SzS8rjbc#b07f97ba-24f4-4ebe-ad71-97fa35f3b683"
+                            target="_blank">api.covid19api.com</a></p>
                 </div>
             </div>
         </div>
