--- a/prevention.html
+++ b/prevention.html
@@ -77,8 +77,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 ">
                         <figure class="prevention__figure">
-                            <img src="images/prevention1.png"
-                                class="prevention__image" alt="">
+                            <img src="images/prevention1.png" class="prevention__image" alt="">
                         </figure>
                     </div>
                 </div>
@@ -96,8 +95,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <figure class="prevention__figure">
-                            <img src="images/prevention2.png"
-                                class="prevention__image" alt="">
+                            <img src="images/prevention2.png" class="prevention__image" alt="">
                         </figure>
                     </div>
                 </div>
@@ -113,8 +111,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 ">
                         <figure class="prevention__figure">
-                            <img src="images/prevention3.png"
-                                class="prevention__image" alt="">
+                            <img src="images/prevention3.png" class="prevention__image" alt="">
                         </figure>
                     </div>
                 </div>
@@ -129,8 +126,7 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <figure class="prevention__figure">
-                            <img src="images/prevention4.png"
-                                class="prevention__image" alt="">
+                            <img src="images/prevention4.png" class="prevention__image" alt="">
                         </figure>
                     </div>
                 </div>
@@ -177,27 +173,30 @@
             </div>
         </section>
 
-         <!-- footer -->
-    <footer class="footer mt-5">
-        <div class="container">
-            <div class="row align-center">
-                <div class="col-12 col-md-3 col-lg-3">
-                    <figure class="logo-figure">
-                        <img src="images/page-logo.svg" class="footer__logo" alt="">
-                    </figure>
-                </div>
-                <div class="col-12 col-md-6 col-lg-6">
-                    <a href="#" class="footer__link">Overview</a>
-                    <a href="#" class="footer__link">Symptomps</a>
-                    <a href="#" class="footer__link">Prevention</a>
-                    <a href="#" class="footer__link">Treatment</a>
-                </div>
-                <div class="col-lg-3">
-                    <p>Source from <a href="https://documenter.getpostman.com/view/10808728/SzS8rjbc#b07f97ba-24f4-4ebe-ad71-97fa35f3b683" target="_blank">api.covid19api.com</a></p>
+        <!-- footer -->
+        <footer class="footer mt-5">
+            <div class="container">
+                <div class="row align-center">
+                    <div class="col-12 col-md-3 col-lg-3">
+                        <figure class="logo-figure">
+                            <img src="images/page-logo.svg" class="footer__logo" alt="">
+                        </figure>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <a href="index.html" class="footer__link">Statistics</a>
+                        <a href="overview.html" class="footer__link">Overview</a>
+                        <a href="symptoms.html" class="footer__link">Symptoms</a>
+                        <a href="prevention.html" class="footer__link">Prevention</a>
+                        <a href="news.html" class="footer__link">News</a>
+                    </div>
+                    <div class="col-lg-3">
+                        <p>Source from <a
+                                href="https://documenter.getpostman.com/view/10808728/SzS8rjbc#b07f97ba-24f4-4ebe-ad71-97fa35f3b683"
+                                target="_blank">api.covid19api.com</a></p>
+                    </div>
                 </div>
             </div>
-        </div>
-    </footer>
+        </footer>
     </main>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="js/functions.js"></script>
