--- a/symptoms.html
+++ b/symptoms.html
@@ -31,8 +31,7 @@
             <div class="nav-frame">
 
                 <figure class="pageLogo">
-                    <img src="images/page-logo.svg"
-                        class="pageLogo__image" alt="LOGO">
+                    <img src="images/page-logo.svg" class="pageLogo__image" alt="LOGO">
                 </figure>
                 <div class="open-menu" id="open-menu">
                     <div class="line"></div>
@@ -131,10 +130,11 @@
                         </figure>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <a href="#" class="footer__link">Overview</a>
-                        <a href="#" class="footer__link">Symptomps</a>
-                        <a href="#" class="footer__link">Prevention</a>
-                        <a href="#" class="footer__link">Treatment</a>
+                        <a href="index.html" class="footer__link">Statistics</a>
+                        <a href="overview.html" class="footer__link">Overview</a>
+                        <a href="symptoms.html" class="footer__link">Symptoms</a>
+                        <a href="prevention.html" class="footer__link">Prevention</a>
+                        <a href="news.html" class="footer__link">News</a>
                     </div>
                     <div class="col-lg-3">
                         <p>Source from <a
