--- a/prevention.html
+++ b/prevention.html
@@ -60,19 +60,14 @@
                     <h2 class="upside__title">Covid-19</h2>
                     <span class="upside__span">What should we do</span>
                     <p class="upside__desc">
-                        Corona viruses are a type of virus.
-                        There are many different kinds, and some cause disease.
-                        A newly identified type has caused
+                        There are some steps that we can all take to lower the transmission rate of Covid-19 and keeps our community safe.
                     </p>
                 </div>
                 <div class="row row-position">
                     <div class="col-12 col-md-6 col-lg-6">
-                        <span class="prevention__span"><span class="prevention__number">01</span> Wear Masks</span>
+                        <span class="prevention__span"><span class="prevention__number">01</span> Wear Face Masks</span>
                         <p class="prevention__desc">
-                            Continually seize impactful vortals rather than future-proof supply
-                            chains. Uniquely exploit emerging niches via fully tested
-                            meta-services. Competently pursue standards compliant leadership
-                            skills vis-a-vis pandemic "outside the box" thinking. Objectively
+                            It is crucial to mask up when around large groups of people. Especially indoors or when on public transport. Even a fabric-based face covering will help catch some of the droplets so that asymptomatic carriers wouldn't unknowingly spread the disease to vulnerable individuals.
                         </p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 ">
@@ -85,12 +80,7 @@
                     <div class="col-12 col-md-6 col-lg-6 ">
                         <span class="prevention__span"><span class="prevention__number">02</span>Wash Your Hands</span>
                         <p class="prevention__desc">
-                            Continually seize impactful vortals rather than future-proof supply chains.
-                            Uniquely exploit emerging niches via fully tested meta-services.
-                            Competently pursue standards compliant leadership skills vis-a-vis pandemic "outside the
-                            box"
-                            thinking.
-                            Objectively Continually seize impactful vortals
+                            We should always wash our hands and sanitize due to the propensity of the virus to survive on foreign objects for extended amounts of time. It is always a good idea to wash one's hands when coming home after any time spent outdoors.
                         </p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
@@ -101,13 +91,8 @@
                 </div>
                 <div class="row row-position">
                     <div class="col-12 col-md-6 col-lg-6 ">
-                        <span class="prevention__span"><span class="prevention__number">03</span>Use nose - rag</span>
-                        <p class="prevention__desc">
-                            Continually seize impactful vortals rather than future-proof supply
-                            chains. Uniquely exploit emerging niches via fully tested meta-services.
-                            Competently pursue standards compliant leadership skills vis-a-vis
-                            pandemic "outside the box" thinking. Objectively
-                        </p>
+                        <span class="prevention__span"><span class="prevention__number">03</span>Use tissues</span>
+                        <p class="prevention__desc">Using tissues or a handkerchief when coughing or sneezing is advised not just for Covid-19 but in general. This ensures that droplets don't spread too far and is also polite!</p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6 ">
                         <figure class="prevention__figure">
@@ -117,11 +102,9 @@
                 </div>
                 <div class="row row-position">
                     <div class="col-12 col-md-6 col-lg-6 ">
-                        <span class="prevention__span"><span class="prevention__number">04</span>Avoid contacts</span>
+                        <span class="prevention__span"><span class="prevention__number">04</span>Avoid contact/social distance</span>
                         <p class="prevention__desc">
-                            Continually seize impactful vortals rather than future-proof supply chains.
-                            Uniquely exploit emerging niches via fully tested meta-services.
-                            Competently pursue standards compliant leadership skills vis-a-vis pandemic
+                            Due to how easy Covid-19 is to spread, it is advisable to avoid unnecessary contact with both friends and strangers. Additionally, staying at least one meter apart can help lower the chance of viral transmission.
                         </p>
                     </div>
                     <div class="col-12 col-md-6 col-lg-6">
@@ -133,7 +116,6 @@
                 <div class="row text-left mt-5 mb-4">
                     <h4 class="mb-4">Some other steps to prevent the transmission of Covid-19:</h4>
                     <ul class="mb-4">
-                        <li>Cover your mouth and nose when coughing or sneezing.</li>
                         <li>Stay home if you feel unwell.</li>
                         <li>Refrain from smoking and other activities that weaken the lungs.</li>
                         <li>Practice physical distancing by avoiding unnecessary travel and staying away from large
@@ -188,11 +170,6 @@
                         <a href="symptoms.html" class="footer__link">Symptoms</a>
                         <a href="prevention.html" class="footer__link">Prevention</a>
                         <a href="news.html" class="footer__link">News</a>
-                    </div>
-                    <div class="col-lg-3">
-                        <p>Source from <a
-                                href="https://documenter.getpostman.com/view/10808728/SzS8rjbc#b07f97ba-24f4-4ebe-ad71-97fa35f3b683"
-                                target="_blank">api.covid19api.com</a></p>
                     </div>
                 </div>
             </div>
