overview page text

--- a/overview.html
+++ b/overview.html
@@ -120,7 +120,7 @@
                             <figure class="card__figure">
                                 <img src="images/card2-image.png?raw=true" class="card__image" alt="">
                             </figure>
-                            <h3 class="card__title">Human Contacts</h3>
+                            <h3 class="card__title">Human Contact</h3>
                             <p class="card__desc">Due to our habits of contact, Covid can be transmitted through touch with an infected individual.</p>
                         </div>
                     </div>
@@ -129,7 +129,7 @@
                             <figure class="card__figure">
                                 <img src="images/card3-image.png?raw=true" class="card__image" alt="">
                             </figure>
-                            <h3 class="card__title">Contained Objects</h3>
+                            <h3 class="card__title">Contaminated Objects</h3>
                             <p class="card__desc">Covid can survive on most objects if touched by an infected individual. Thus it can spread indirectly.</p>
                         </div>
                     </div>
